# ContextEngineering

./: .gitignore  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ContextEngineering.rar  README.md
code/11-rag-from-scratch/: .env.example  README.md  pyproject.toml
code/11-rag-from-scratch/src/ragkit/: __init__.py  bm25.py  chunk.py  fuse.py  generate.py  ingest.py  pack.py
code/11-rag-from-scratch/tests/: test_core.py
code/15-mcp-quickstart/: .env.example  README.md  pyproject.toml  server.py
code/15-mcp-quickstart/src/mcp_quickstart/: __init__.py  refunds.py
code/15-mcp-quickstart/tests/: test_refunds.py
code/15-tool-schemas/: .env.example  README.md  pyproject.toml
code/15-tool-schemas/src/toolschemas/: __init__.py  budget.py  validate.py
code/15-tool-schemas/tests/: test_toolschemas.py
code/20-eval-ragas/: .env.example  README.md  pyproject.toml
code/20-eval-ragas/src/evalkit/: __init__.py  gate.py  goldenset.py  judge.py  metrics.py
code/20-eval-ragas/tests/: test_evalkit.py
code/20-eval-ragas/tests/fixtures/: golden_set.json
code/28-rag-chatbot/: README.md
code/29-mcp-server-full/: README.md
code/30-email-reply-agent/: README.md
code/30-email-reply-agent/prompts/: drafter_system.md
posts/01-why-context-engineering/: frontmatter.yaml  index.md
posts/02-six-layers-of-context/: frontmatter.yaml  index.md
posts/03-how-llms-read-context/: index.md
posts/04-tokens-windows-budgets/: frontmatter.yaml  index.md
posts/05-context-failure-modes/: index.md
posts/05-economics-of-context/: frontmatter.yaml  index.md
posts/06-context-failure-modes/: frontmatter.yaml  index.md
posts/07-write-select-compress-isolate/: frontmatter.yaml  index.md
posts/08-write-strategies/: frontmatter.yaml  index.md
posts/09-select-strategies/: frontmatter.yaml  index.md
posts/10-data-ingestion-pipelines/: frontmatter.yaml  index.md
posts/11-rag-in-depth/: frontmatter.yaml  index.md
posts/12-compress-strategies/: frontmatter.yaml
posts/13-isolate-strategies/: frontmatter.yaml  index.md
posts/14-system-prompt-as-software/: frontmatter.yaml
posts/15-tools-and-mcp/: frontmatter.yaml  index.md
posts/16-memory-systems/: frontmatter.yaml  index.md
posts/17-advanced-retrieval/: frontmatter.yaml  index.md
posts/19-multimodal-context/: frontmatter.yaml  index.md
posts/21-structured-output-guardrails/: frontmatter.yaml  index.md
posts/22-observability/: frontmatter.yaml  index.md
posts/23-security/: frontmatter.yaml  index.md
posts/24-privacy-and-governance/: frontmatter.yaml  index.md
posts/25-long-context-vs-rag/: frontmatter.yaml  index.md
posts/26-modern-agentic-workflow/: frontmatter.yaml  index.md
