[project]
name = "ragkit"
version = "0.1.0"
description = "A minimal, readable RAG pipeline in plain Python. Companion to Post 11 of the Context Engineering series."
requires-python = ">=3.11"
dependencies = []  # the offline core has NO runtime dependencies

[project.optional-dependencies]
online = ["anthropic>=0.40", "openai>=1.0", "voyageai>=0.2", "cohere>=5.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragkit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
