[project]
name = "mcp-quickstart"
version = "0.1.0"
description = "A minimal MCP server (one tool, one resource, one prompt) around pure, testable logic. Companion to Posts 15 and 29."
requires-python = ">=3.11"
dependencies = []  # the pure tool logic + its tests need nothing

[project.optional-dependencies]
server = ["mcp>=1.2"]   # needed only to actually RUN server.py
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_quickstart"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
