[project]
name = "tool-schemas"
version = "0.1.0"
description = "Companion code for Post 15 — Tools and MCP: a tool token-budget calculator and a structured-output validator."
requires-python = ">=3.11"
dependencies = []  # the offline core (budget estimate + subset-schema validation) is pure stdlib

[project.optional-dependencies]
# Nicer, production-grade validation and the provider call are optional extras.
schema = ["pydantic>=2.7", "jsonschema>=4.22"]
api = ["openai>=1.40", "anthropic>=0.40"]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolschemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
