[project]
name = "evalkit"
version = "0.1.0"
description = "A small, honest evaluation harness for RAG: golden set, deterministic metrics, regression gate, and an LLM-judge scaffold. Companion to Post 20."
requires-python = ">=3.11"
dependencies = []  # the offline core (metrics + gate + golden set) is pure stdlib

[project.optional-dependencies]
online = ["anthropic>=0.40"]      # the LLM-as-judge layer
ragas = ["ragas>=0.2", "datasets>=2.0"]  # batteries-included online metrics
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalkit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
